fix: Header dropdowm rent to align to left

--- a/assets/css/custom-css/headerNew.css
+++ b/assets/css/custom-css/headerNew.css
@@ -47,6 +47,9 @@ header {
 
 .modal-dialog-custom {
   max-width: 900px;
+  top: 65px;
+  left: 23px;
+  margin: 0;
 }
 
 .custom-btn-white {
